--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,11 @@ html{
     overflow-x: hidden;
 }
 body {
-    overflow-x: hidden;
+   
     height: 100%;
     background-color: #000;
     width: 100%;
-  
+    overflow-x: hidden;
 
   
 }
@@ -31,7 +31,7 @@ body {
     height: 618px;
     width: 100%!important;
     padding: 0;
-    overflow: hidden!important;
+    
     
 }
 
@@ -131,12 +131,10 @@ h1 span{
 
 .heartContainer{
     transform: rotate(-10deg)!important;
-    margin: 290px 0 0 135px!important;
+    margin: 290px 0 0 135px;
     position: absolute;
-    transform: scale(1)!important;
    
 }
-
 .heart {
     background-color: #FF0000;
     display: inline-block;
@@ -179,6 +177,7 @@ height: 292px;
 transform: rotate(-15.62deg);
 margin: 210px 0 0 145px;
 
+
 }
 
 .stars{
@@ -215,7 +214,7 @@ button{
     font-size: 16px;
     /* need to be change to Landry Gothic*/
     font-family: Verdana, Geneva, Tahoma, sans-serif; 
-    font-weight: 600;
+    font-weight: 800;
     letter-spacing: 0.06em;
 }
 
@@ -443,26 +442,25 @@ header button:hover{
 @media screen and (min-width:820px) {
     
     .container{
-        border: 1px solid blue;
+     
         height: 844px;
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        justify-content: center;
     }
-    .header--block{
-        
-        width: 90%;
-        border: 1px solid black;
-        margin-top: 20px;
-        
+    .header--container{
+        width: 100%;
+        margin-top: 20px; 
         
     }
-
-
-
+   
     .container1{
    
      height: 623px;
      flex-flow: row nowrap;
      justify-content: space-around!important;
-     width: 100% ;
+     width: 100%;
         
     }
     
@@ -575,8 +573,12 @@ header button:hover{
 
   
 }
-@media screen and (min-width:1500px){
 
+
+@media screen and (min-width:1500px){
+    .header--top{
+        margin: 0 1%;
+    }
     .header--container h1{
        
         font-size: 222px;
@@ -603,11 +605,20 @@ header button:hover{
         transform: scale(3);
         margin: 250px 0 0 1250px;  
     }
-    
+    .star4{
+        transform: scale(2);
+        margin: 530px 0 0 565px;
     }
     .heartContainer{
-        transform: scale(2.4) rotate(-15deg);
-        margin: 600px 0 0 630px;
+       
+        margin: 570px 0 0 630px;
+        transform: scale(2) rotate(-15deg)!important;
+    }
+    button{
+        margin: 530px 0 0 0;
+        width: 242px;
+        height: 55px;
+        font-size: 19px;
     }
 }
 
