--- a/styles.css
+++ b/styles.css
@@ -732,7 +732,8 @@ header button:hover{
     height: 100px;
     display: flex;
     flex-direction: column;
-    height: 900px;
+    height: 1100px;
+    overflow: hidden;
 }
 .block--1{
     display: flex;
@@ -749,7 +750,9 @@ header button:hover{
     font-weight: 500;
     margin: 50px 0 0 0;
 }
-
+.productInfo{
+    margin: 100px 0 0 0;
+}
 .productInfo--Size{
     
     align-self :flex-start;
@@ -784,26 +787,31 @@ header button:hover{
 }
 
 .star1--produit{
- 
-    margin: -140px 0 0 0;
+    position: absolute;
+    margin: -910px 0 0 48%;
+    
 }
 .star2--produit{
-    transform: scale(1.7);
-    margin: -120px 0 0 320px;
+    transform: scale(1.3);
+    margin: -800px 0 0 85%;
+    overflow: hidden;
 }
 .star3--produit{
-    margin: 90px 190px 0 0;
+    margin: -700px 0 0 10%;
 }
 .star4--produit{
     z-index: 3!important;
-    margin: 160px 0 0 140px;
+    margin: -5px 0 0 -75px;
+    transform: rotate(10deg) scale(0.7);
+
 }
 
 
 .heartProduit{
     transform: scale(1.4) rotate(-10deg)!important;
     position: absolute;
-    margin: 150px 0 0 200px;
+    margin: -550px 0 0 60%;
+    
     
 }
 .heartProduit p{
@@ -820,9 +828,105 @@ header button:hover{
 
 .block--2{
     width: 100%;
-    height: 100%;
-      
+    height: 9000px;
     background-color: #FFAF96;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.block--2 h2{
+    color: #AF0032;
+    font-family: "thunder";
+    font-style: normal;
+    font-weight: 800;
+    font-size: 112px;
+    margin: 20px 0 35px 0;
+    
+}
+
+.block--2 h2 span{
+    color: #FF0000;
+}
+
+.block--2 > p{
+
+    color: #AF0032!important;
+    text-align: center;
+    font-family: "thunder";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23px;
+}
+
+.block--2 .productPrice{
+    color: #FF0000!important;
+    font-size: 40px;
+    padding: 20px;
+}
+
+
+.block--2 .meet{
+    color: #FFF!important;
+    width: 90%;
+    font-size: 67px;
+    
+}
+
+.button__addToCart{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border:1px solid #AF0032;
+    width: 60%;
+    height: 44px;
+}
+.button__addToCart--chooseTheNumber{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 35%;
+    height: 100%;
+    color:#AF0032;
+    font-size: 23px;
+}
+.button__addToCart--number{
+    background: #FFAF96;
+    border: none;
+    width: 20%;
+    text-align: center;
+    color:#AF0032;
+    font-size: 23px;
+    padding: 5px;
+    margin: 0 0 0 2px;
+    
+}
+
+.button__addToCart--plus{
+    margin: 2px 0 0 0;
+    font-weight: 800;
+}
+.button__addToCart--btn{
+    background: #AF0032;
+    width: 65%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    
+}
+
+.button__addToCart--btn div{
+    color: #FFF;
+    font-family: "thunder";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    letter-spacing: 2px;
+    margin: 6px 0 0 0;
 }
 
 @media screen and (min-width:800px){
@@ -945,4 +1049,4 @@ header button:hover{
       
         width: 45%;
     }
-}
+}   
