--- a/styles.css
+++ b/styles.css
@@ -729,10 +729,9 @@ header button:hover{
 }
 
 .containerProduit--1{
-    height: 100px;
+    
     display: flex;
     flex-direction: column;
-    height: 1100px;
     overflow: hidden;
 }
 .block--1{
@@ -773,10 +772,12 @@ header button:hover{
     position: absolute;
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 320px;
     left: 50%;
     transform: translate(-50%, 0);
     margin: 160px 0 0 0;
+    border: 1px solid;
+    height: 100%;
 
 }
 .pilotProduit{
@@ -788,12 +789,12 @@ header button:hover{
 
 .star1--produit{
     position: absolute;
-    margin: -910px 0 0 48%;
+    margin: -180px 0 0 20px;
     
 }
 .star2--produit{
     transform: scale(1.3);
-    margin: -800px 0 0 85%;
+    margin: -1px 0 0 70%;
     overflow: hidden;
 }
 .star3--produit{
@@ -828,7 +829,6 @@ header button:hover{
 
 .block--2{
     width: 100%;
-    height: 9000px;
     background-color: #FFAF96;
     display: flex;
     flex-direction: column;
@@ -841,7 +841,7 @@ header button:hover{
     font-style: normal;
     font-weight: 800;
     font-size: 112px;
-    margin: 20px 0 35px 0;
+    margin: 5px 0 35px 0;
     
 }
 
