--- a/styles.css
+++ b/styles.css
@@ -776,7 +776,6 @@ header button:hover{
     left: 50%;
     transform: translate(-50%, 0);
     margin: 160px 0 0 0;
-    border: 1px solid;
     height: 100%;
 
 }
@@ -794,11 +793,11 @@ header button:hover{
 }
 .star2--produit{
     transform: scale(1.3);
-    margin: -1px 0 0 70%;
+    margin: 40px 0 0 70%;
     overflow: hidden;
 }
 .star3--produit{
-    margin: -700px 0 0 10%;
+    margin: 80px 0 0 -70%;
 }
 .star4--produit{
     z-index: 3!important;
@@ -807,11 +806,17 @@ header button:hover{
 
 }
 
-
+.heartProduitWide{
+    display: none;
+}
+.heartProduitSmall{
+    z-index: 1;
+    transform: scale(1.3)!important;
+    margin: 240px 0 0 90px;
+    
+}
 .heartProduit{
-    transform: scale(1.4) rotate(-10deg)!important;
-    position: absolute;
-    margin: -550px 0 0 60%;
+   
     
     
 }
@@ -841,7 +846,7 @@ header button:hover{
     font-style: normal;
     font-weight: 800;
     font-size: 112px;
-    margin: 5px 0 35px 0;
+    margin: 14px 0 35px 0;
     
 }
 
@@ -857,6 +862,7 @@ header button:hover{
     font-style: normal;
     font-weight: 400;
     font-size: 23px;
+    width: 90%;
 }
 
 .block--2 .productPrice{
@@ -873,14 +879,15 @@ header button:hover{
     
 }
 
+
 .button__addToCart{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     border:1px solid #AF0032;
-    width: 60%;
-    height: 44px;
+    width: 80%;
+    height: 66px;
 }
 .button__addToCart--chooseTheNumber{
     display: flex;
@@ -892,13 +899,16 @@ header button:hover{
     color:#AF0032;
     font-size: 23px;
 }
+input[type="number"] {
+    -moz-appearance: textfield;
+}
 .button__addToCart--number{
     background: #FFAF96;
     border: none;
     width: 20%;
     text-align: center;
     color:#AF0032;
-    font-size: 23px;
+    font-size: 30px;
     padding: 5px;
     margin: 0 0 0 2px;
     
