--- a/styles.css
+++ b/styles.css
@@ -708,6 +708,7 @@ header button:hover{
 
 .containerProduit{
     background-color: #AF0032;
+    overflow-x: hidden;
    
 }
 .containerProduit ul{
@@ -743,7 +744,7 @@ header button:hover{
     
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .block--1{
     display: flex;
@@ -751,6 +752,7 @@ header button:hover{
     width: 100%;
     height: 100%;
     background-color: #AF0032;
+    overflow-x: hidden;
 }
 .meet{
     text-align: center;
@@ -794,6 +796,7 @@ header button:hover{
     
     margin: 0;
     transform: rotate(0);
+    overflow-x: hidden;
     
 }
 
@@ -846,6 +849,7 @@ header button:hover{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
 .block--2 h2{
     color: #AF0032;
@@ -946,6 +950,25 @@ input[type="number"] {
     margin: 6px 0 0 0;
 }
 
+.block--3{
+ 
+    width: 100%;
+    overflow-x: hidden;
+}
+.firstProduct, .secondProduct, .thirdProduct{
+    width: 100%;
+    height: 504px;
+}
+.firstProduct img, .secondProduct img, .thirdProduct img{
+   width: 100%;
+   height: 100%;
+    
+}
+
+.secondProduct img{
+    height: 507px;
+}
+
 @media screen and (min-width:820px){
     
     .header--top--Produit{
@@ -960,6 +983,7 @@ input[type="number"] {
         background-color: #FFAF96;
         height: 145px;
         width: 45%;
+        
         
     }
     .containerDivider p{
@@ -976,11 +1000,13 @@ input[type="number"] {
         width: 100%;
         display: flex;
         flex-flow: row wrap;
+        
     }
     
     .block--1{
         
         width: 55%;
+      
        
     }
 
@@ -1071,7 +1097,7 @@ input[type="number"] {
     .block--2{
       
         width: 45%;
-       
+        overflow: hidden;
     }
 
     .block--2 h2{
@@ -1161,222 +1187,29 @@ input[type="number"] {
         letter-spacing: 2px;
         margin: 6px 0 0 0;
     }
-    
-}   
 
-@media screen and (min-width:1024px){
-    
-    .header--top--Produit{
-        height: 145px;
-    }
-    .logoProduit{
-        height: 106px;
-        margin: 40px 0 0 0;
-    }
-    
-    .containerDivider{
-        background-color: #FFAF96;
-        height: 145px;
-        
-    }
-    .containerDivider p{
-        color:#AF0032
-    }
-    .menuWide{
-        display: block;
-    }
-    .menuSmall{
-        display: none;
-    }
-    .containerProduit--1{
-        height: 921px;
+    .block--3{
+        display: flex;
+        flex-direction: row;
+        height: 304px;
         width: 100%;
-        display: flex;
-        flex-flow: row wrap;
     }
-    
-    .block--1{
-        
-        width: 55%;
-       
-    }
-
-    .meet{
-        text-align: center;
-        font-family: "thunder";
-        font-style: normal;
-        font-size: 412px;
-        font-weight: 800;
-        margin: 30px 0 0 0;
-    }
-    
-    .productInfo--Size{
-        
-        
-        align-self :flex-start;
-        font-family: "thunder";
-        font-style: normal;
-        font-size: 42px;
-        font-weight: 500;
-        margin: 280px 0 0 50px;
-    }
-    
-    .productInfo--Values{
-        margin: 0 0 0 50px;
-        font-size: 22px;
-    }
-    
-    
-    .productImage{
-        
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 30.3%;
-        right: 0;
-        transform: translate(-55%, 0);
-        margin: 520px 0 0 0;
-        width: 55%;
-    
-    
-    }
-    .pilotProduit{
-        height: 604px;
-        margin: -117px 0 0 0;
-        transform: rotate(0);
+    .firstProduct, .secondProduct, .thirdProduct{
+        width: 33.333%;
         
     }
-    
-    .star1--produit{
-     
-        margin: -430px 0 0 47px;
-    }
-    .star2--produit{
-        transform: scale(2.4);
-        margin: -400px 0 0 57%;
-    }
-    .star3--produit{
-        margin: 100px 0 0 -400px;
-        transform: scale(1.4)
-    }
-    .star4--produit{
-        transform: scale(.6) rotate(10deg);
-        margin: 0px 0 0 -72px;
+    .firstProduct img, .secondProduct img, .thirdProduct img{
+       width: 100%;
+       height: 100%;
+       object-fit: fill; 
     }
     
-    .heartProduitSmall{
-        display: none;
-    }
-    .heartProduitWide{
-        position: absolute;
-        display: inline-block;
-        transform: scale(3) rotate(-10deg)!important;
-        margin: -500px 0 0 49%;
-      
-    }
-    .heartProduit p{
-       
-        color: #FFF;
-        font-family: "thunder";
-        font-style: normal;
-        font-size: 27px;
-        font-weight: 500;
-        margin: -140px 0 0 20px;
-        transform: rotate(10deg);
-    }
-    
-    .block--2{
-      
-        width: 45%;
-    }
-
-    .block--2 h2{
-       
-        font-size: 156px;
-        margin: -240px 0 0 0;
-        padding: 0 0 30px 0;
-    }
-    
-    .block--2 > p{
-     
-        font-size: 27px;
-        word-spacing: 4px;
-        line-height: 33px;
-        width: 80%;
-        
-    }
-    
-    .block--2 .productPrice{
-        color: #FF0000!important;
-        font-size: 80px;
-        margin: 50px 0 0 0;
-    }
-    
-    
-    .block--2 .meet{
-        color: #FFF!important;
-        width: 90%;
-        font-size: 67px;
-        
-    }
-    
-    
-    .button__addToCart{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        border:1px solid #AF0032;
-        width: 40%;
-        height: 88px;
-    }
-    .button__addToCart--chooseTheNumber{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        width: 35%;
-        height: 100%;
-        color:#AF0032;
-        font-size: 27px;
-    }
-   
-    .button__addToCart--number{
-       
-        text-align: center;
-        width: 70px;
-        font-size: 30px;
-        padding: 0;
-        margin: 0 0 0 0;
-        
-    }
-    
-    .button__addToCart--plus{
-        margin: 2px 0 0 0;
-        font-weight: 800;
-    }
-    .button__addToCart--btn{
-        background: #AF0032;
-        width: 65%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      
-        
-    }
-    
-    .button__addToCart--btn div{
-        color: #FFF;
-        font-family: "thunder";
-        font-style: normal;
-        font-weight: 400;
-        font-size: 25px;
-        letter-spacing: 2px;
-        margin: 6px 0 0 0;
+    .secondProduct img{
+        height: 306px;
     }
     
 }   
+
 
 @media screen and (min-width:1024px){
     
@@ -1436,6 +1269,14 @@ input[type="number"] {
         margin: 70px 0 70px 0;
        
     }
+    .block--3{
+        height: 304px;
+       
+    }
+    
+    .secondProduct img{
+        height: 306px;
+    }
 
 }   
 
@@ -1478,6 +1319,10 @@ input[type="number"] {
         font-size: 156px;
         margin:  -110px 0 0 0;
         padding: 0 0 30px 0;
+    }
+
+    .secondProduct img{
+       height: 506px;
     }
     
 
