--- a/styles.css
+++ b/styles.css
@@ -953,7 +953,7 @@ input[type="number"] {
 .block--3{
  
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .firstProduct, .secondProduct, .thirdProduct{
     width: 100%;
@@ -968,6 +968,14 @@ input[type="number"] {
 .secondProduct img{
     height: 507px;
 }
+
+.footerProduit{
+    overflow: hidden;
+    bottom: 0;
+    width: 100%;
+    height: 50px!important;
+}
+
 
 @media screen and (min-width:820px){
     
